--- a/.github/actions/issue-maker/action.yml
+++ b/.github/actions/issue-maker/action.yml
@@ -9,6 +9,9 @@ inputs:
     description: "Every issue needs a title, it's nice to supply one, even though you could do this dynamically within your code"
     default: "a joke for you"
     required: true
+  repo-token:
+    description: "Required token for using @actions/github library"
+    required: true
 
 runs:
   using: "node12"
