--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -2,9 +2,9 @@ name: JS Actions
 
 on:
   push: 
-    branches: all
+    branches: [ master, action-three ]
   pull_request:
-    types: [labeled]
+    types: [ labeled ]
 
 jobs:
   action:
